# s3explorer

./: .gitignore  Cargo.toml  README.md  SPRINT_BACKLOG.md  SRD.md  STREAM_ORCHESTRATION.md  TECH_STACK.md  UX_CONCEPTION.md
.github/: settings.yml
.github/workflows/: build.yml
adr/: ADR-001-dual-pane-architecture.md  ADR-002-async-transfer-engine.md  ADR-003-credential-storage-libsecret.md  ADR-004-metadata-cache-sqlite.md  ADR-005-packaging-deb-appimage.md
r2-core/: Cargo.toml
r2-core/src/: cache.rs  credentials.rs  error.rs  events.rs  lib.rs  s3_client.rs  transfer.rs
r2-core/src/cache/: database.rs  manager.rs
r2-core/src/credentials/: profile.rs  storage.rs
r2-core/src/s3_client/: client.rs  types.rs
r2-core/tests/: integration_test.rs
r2-ui/: Cargo.toml
r2-ui/src/: app.rs  main.rs  pane.rs  profile_manager.rs  transfer_queue.rs  widgets.rs
r2-ui/src/dialogs/: acl_editor_dialog.rs  confirm_dialog.rs  mod.rs  properties_dialog.rs  rename_dialog.rs  version_history_dialog.rs
r2-ui/tests/: ui_tests.rs
resources/: r2.desktop  r2.metainfo.xml
scripts/: build-appimage.sh  build-deb.sh
