[workspace]
members = ["r2-core", "r2-ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["r2 Team <dev@r2.app>"]
license = "MIT"
description = "S3 Object Storage Browser"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# S3 Client
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Security
zeroize = "1"

# Secret Service via D-Bus
dbus-secret-service = "4"

# UI
gtk4 = { version = "0.9", features = ["v4_12"] }
gio = "0.20"
glib = "0.20"
futures = "0.3"

# Tokio utilities
tokio-util = "0.7"