[package]
name = "r2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async Runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# S3 Client
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true

# Database
rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true

# Security
zeroize.workspace = true
dbus-secret-service.workspace = true

# Transfer Engine
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3"
mockall = "0.13"