[package]
name = "r2-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "r2"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "r2 Team <dev@r2.app>"
depends = "$auto, libgtk-4-1 (>= 4.12), libsecret-1-0 (>= 0.20)"
section = "utils"
priority = "optional"
assets = [
    ["target/release/r2", "usr/bin/", "755"],
    ["resources/r2.desktop", "usr/share/applications/", "644"],
    ["resources/r2.metainfo.xml", "usr/share/metainfo/", "644"],
    ["resources/icons/hicolor/256x256/apps/r2.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]

[dependencies]
# Core
r2-core = { path = "../r2-core" }

# Async Runtime
tokio.workspace = true
futures.workspace = true

# UI
gtk4.workspace = true
gio.workspace = true
glib.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true